--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "common-tags": "^1.8.0",
     "discord.js": "discordjs/discord.js#5e9bd786d13f2da11544e45e4ac9622269259789",
     "eslint": "^5.16.0",
+    "express": "^4.16.4",
     "klasa": "dirigeants/klasa#b60b83309548f487ee2efd2c51ba5b24292aa7e0",
     "mongodb": "^3.2.3",
     "node-cmd": "^3.0.0",
